// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Matches DOM Snapshot > Matches DOM Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modal-root"
    >
      <div
        class="f1atpta9"
      >
        <h1>
          Login
        </h1>
        <div
          class="f1ur6vce"
        >
          <form>
            <div
              class="fidbxqg"
            >
              <input
                name="email"
                placeholder="Email"
                type="text"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <input
                name="password"
                placeholder="Password"
                type="password"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <label>
                <input
                  role="checkbox"
                  type="checkbox"
                />
                Remember me
              </label>
            </div>
            <div
              class="fidbxqg"
            >
              <button
                type="submit"
              >
                Login
              </button>
            </div>
          </form>
        </div>
        <br />
        <label>
          Register for an account? 
          <a
            href="#"
          >
            Register
          </a>
        </label>
        <a
          href="#"
        >
          Close
        </a>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Matches DOM Snapshot > Matches DOM Snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modal-root"
    >
      <div
        class="f1atpta9"
      >
        <h1>
          Register
        </h1>
        <div
          class="f1ur6vce"
        >
          <form>
            <div
              class="fidbxqg"
            >
              <input
                name="name"
                placeholder="Full name"
                type="text"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <input
                name="phoneNumber"
                placeholder="Phone number"
                type="text"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <input
                name="email"
                placeholder="Email"
                type="text"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <input
                name="password"
                placeholder="Password"
                type="password"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <input
                name="confirmPassword"
                placeholder="Confirm Password"
                type="password"
              />
            </div>
            <div
              class="fidbxqg"
            >
              <label>
                <input
                  name="terms"
                  role="checkbox"
                  type="checkbox"
                />
                I agree to the terms and conditions
              </label>
            </div>
            <div
              class="fidbxqg"
            >
              <button
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </div>
        <br />
        <label>
          Already have an account? 
          <a
            href="#"
          >
            Login
          </a>
        </label>
        <a
          href="#"
        >
          Close
        </a>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
